--- a/static/main_page.css
+++ b/static/main_page.css
@@ -23,13 +23,6 @@ body {
     align-items: center;
 }
 
-.logout-text {
-    margin-left: 8px;
-    font-weight: 600;
-    color: #363636;
-    cursor: pointer;
-}
-
 .logout-text:hover {
     color: #ff3860;
 }
@@ -48,15 +41,19 @@ body {
     align-items: center;
 }
 
-.wwl-label {
-    position: fixed;
-    top: 10px;
-    left: 16px;
-    z-index: 2000;
-    font-size: 30px;
-    font-weight: 700;
-    cursor: pointer;
-    color: #00c32e;
+.wwl-label{ 
+    font-size:30px; 
+    font-weight:700; 
+    color:#00c32e !important;
+    text-decoration: none;
+}
+
+.wwl-label:hover {
+    color: #00a025 !important;
+}
+
+.logout-text:hover {
+    color: #ff3860 !important;
 }
 
 /* 메인 컨테이너 */
