--- a/templates/team_page.html
+++ b/templates/team_page.html
@@ -23,15 +23,11 @@
         align-items: center;
     }
 
-    .wwl-label { 
-        position: fixed;
-        top: 10px;
-        left: 16px;
-        z-index: 2000;
-        font-size: 30px;
-        font-weight: 700;
-        color: #00c32e;
-        cursor: pointer;
+    .wwl-label{ 
+      font-size:30px; 
+      font-weight:700; 
+      color:#00c32e !important;
+      text-decoration: none;
     }
     .top-menu {
         position: fixed;
@@ -40,12 +36,6 @@
         z-index: 2000;
         display: flex;
         align-items: center;
-    }
-    .logout-text {
-        margin-left: 8px;
-        font-weight: 600;
-        color: #363636;
-        cursor: pointer;
     }
     .logout-text:hover {
         color: #ff3860;
