--- a/templates/team_signup.html
+++ b/templates/team_signup.html
@@ -4,7 +4,7 @@
 <div class="container">
     
     <div class = "sign-up-head">
-      <a href="{{ url_for('dashboard') }}" class="link-btn" >← 뒤로가기</a> 
+      <a href="javascript:history.back()" class="link-btn">← 뒤로가기</a>
       <h2 class="title">팀 생성</h2>
     </div>
     
