뒤로 가기(진짜 뒤로감)

--- a/templates/team_page.html
+++ b/templates/team_page.html
@@ -124,7 +124,7 @@
     <div class="container">
       <!-- 뒤로가기 버튼 -->
       <div class="mb-3">
-        <a href="/main_page" class="button is-small" style="background: none; border: none; box-shadow: none; padding-left: 0;">
+        <a href="javascript:history.back()" class="button is-small" style="background: none; border: none; box-shadow: none; padding-left: 0;">
           <span class="icon">
             <i class="fas fa-arrow-left"></i>
           </span>
