--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -68,12 +68,23 @@
                     <div class="panel-inner team-stack" id="team-section">
                         <div class="team-list-header mb-4">
                             <div class="is-flex is-align-items-center is-justify-content-space-between">
-                                <h3 class="title is-4 has-text-centered" style="flex: 1; margin-bottom: 0;">
+                                <h3 class="title is-4" style="margin-bottom: 0;">
                                     Week {{ selected_week }} 팀 목록
                                 </h3>
-                                <a href="/team_join/{{ selected_week }}" class="button is-success is-small">
-                                    <span>+ 팀 가입</span>
-                                </a>
+                                <div class="buttons" style="margin-left: auto; padding-left: 20px;">
+                                    <a href="/team_signup?week={{ selected_week }}" class="button is-info is-small">
+                                        <span class="icon is-small">
+                                            <i class="fas fa-plus"></i>
+                                        </span>
+                                        <span>팀 생성</span>
+                                    </a>        
+                                    <a href="/team_join/{{ selected_week }}" class="button is-success is-small">
+                                        <span class="icon is-small">
+                                            <i class="fas fa-user-plus"></i>
+                                        </span>
+                                        <span>팀 가입</span>
+                                    </a>
+                                </div>
                             </div>
                         </div>
                         
